# reinforcement-learning

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  build-notebook.bat  build.Dockerfile  conanfile.txt  reinforcement-learning.cpp  reinforcement-learning.h  vcpkg.json
.github/workflows/: cmake.yml
docker/: build.Dockerfile  notebook.Dockerfile
draw/: CMakeLists.txt  draw_gridworld.cpp
draw/include/draw/: grid.h
draw/src/: grid.cpp
kbandit/: CMakeLists.txt  k-bandit.cpp  run-kbandit.cpp  test-kbandit.cpp
kbandit/include/kbandit/: k-bandit-agent.h  k-bandit.h
kbandit/src/: k-bandit-agent.cpp  k-bandit.cpp
kbandit/tests/: test-kbandit.cpp
mdp/: CMakeLists.txt  run_gridworld_agents.cpp  run_mdp.cpp  test-gridworld.cpp
mdp/include/mdp/: actions.h  agents.h  graph.h  graph_mdp.cpp  graph_mdp.h  graph_mdp_policy.h  graph_policy.h  gridworld.h  mdp.h
mdp/src/: actions.cpp  agents.cpp  gridworld.cpp
mdp/tests/: test-agents.cpp  test-graphmdp-greedy.cpp  test-graphmdp.cpp  test-gridworld.cpp
notebook/: Dockerfile  docker-compose.yml
notebook/work/: Graphs.ipynb  K-Bandit Run.ipynb  Simple_ROOTbook_cpp.ipynb  Untitled.ipynb  plot.ipynb
tic-tac-toe/: CMakeLists.txt  run.cpp  test-tictactoe.cpp  tictactoe.h
